--- a/CFM/app/src/main/res/layout/activity_cadastro.xml
+++ b/CFM/app/src/main/res/layout/activity_cadastro.xml
@@ -83,7 +83,7 @@
 
         <!-- TEXTO SIGN UP -->
         <TextView
-            android:id="@+id/login"
+            android:id="@+id/signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
