--- a/CFM/app/src/main/res/layout/activity_login.xml
+++ b/CFM/app/src/main/res/layout/activity_login.xml
@@ -59,7 +59,7 @@
 
         <!-- BOTÃO ENTRAR -->
         <Button
-            android:id="@+id/btnEntrar"
+            android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -70,7 +70,7 @@
 
         <!-- TEXTO SIGN UP -->
         <TextView
-            android:id="@+id/login"
+            android:id="@+id/signUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
