--- a/CFM/app/src/main/res/layout/activity_chat_bot.xml
+++ b/CFM/app/src/main/res/layout/activity_chat_bot.xml
@@ -70,6 +70,7 @@
             android:inputType="textMultiLine"
             android:maxLines="4"
             android:textColor="#000000"
+            android:textColorHint="#818181"
             android:textSize="20sp"
             android:textStyle="bold" />
 
